--- a/Presentation/Cool - Namespaces/index.html
+++ b/Presentation/Cool - Namespaces/index.html
@@ -201,6 +201,7 @@ namespace NamespaceDemoDot5
 
 <aside class="notes"><p>Der Pfad kann Absolut angegeben werden, oder relativ.</p>
 </aside></script></section><section data-markdown><script type="text/template">
+**`Dotnet6`**
 ```c#
 Console.WriteLine("Hello, World!");
 /* Absoluter Pfad, funktioniert */
@@ -211,7 +212,54 @@ Data.Person p1 = new Data.Person(); // NAMESPACE NOT FOUND
 ```
 
 <aside class="notes"><p>Hinweis: Es scheint merkwürdig, dass der relative Pfad hier nicht funktioniert. Das hat etwas damit zu tun, wie Dotnet6 diese <em>impliziten</em> Namespace-/Klassen-/Main-Anweisungen für uns einsetzt. Auf den nächsten slides finden Sie eine bessere Methode, bei der wir nicht auf den relativen Namespace angewiesen sind.</p>
-</aside></script></section></section><section  data-markdown><script type="text/template">
+</aside></script></section></section><section ><section data-markdown><script type="text/template">
+### Relativer Namespace-Pfad
+
+<aside class="notes"><p>Folgend finden Sie einige Beispiele wie Namespaces sinnvoll im neuen Dotnet6 Syntax verwendet werden können.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+**`Dotnet6`**
+
+Datei: `/Data/Person.cs`
+```c#
+/*In .NET6 können wir den Namespace in einer Zeile angeben*/
+namespace NamespaceDemoDot6.Data;
+
+internal class Person
+{
+	public int Id { get; set; }
+	public string Name { get; set; }
+}
+```
+
+Datei: **`/Program.cs`**
+```c#
+using NamespaceDemoDot6.Data;
+Person p0 = new Person();
+```
+
+<aside class="notes"><p>Durch die Angabe des Namespace in einer Zeile, können wir uns eine Ebene an Verschachtelung sparen und haben so mehr horizontalen Platz für unseren Code.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+Wir können den Namespace innerhalb von Unterordnern auch komplett weglassen.
+
+Datei: `/Data/Person.cs`
+```c#
+/* Hier ohne Namespace... */
+internal class Person
+{
+	public int Id { get; set; }
+	public string Name { get; set; }
+}
+```
+
+Datei: **`/Program.cs`**
+```c#
+/* Da wir in der Person.cs keinen Namespace eingetragen haben,
+		nutzen wir den Standart-Namespace 
+		(der unseres Projektes)
+*/
+Person p0 = new Person();
+```
+</script></section></section><section  data-markdown><script type="text/template">
 ## Namespaces einbinden
 
 **`Dotnet5`** u. **`Dotnet6`**
@@ -232,7 +280,13 @@ OldPerson p1 = new OldPerson();
 ```
 
 <aside class="notes"><p>Using-Direktiven <em>sollten</em> immer am Anfang (ab der ersten Zeile) erfolgen. Vermeiden Sie es innerhalb von einzelnen Methoden oder Funktionen <code>using</code>&#39;s zu nutzen.</p>
-</aside></script></section></div>
+</aside></script></section><section  data-markdown><script type="text/template">
+## Learnings
+
+- Wir können die Namespaces beliebig umbenennen (Sollten dies aber **nicht** tun)
+- Standartmäßig spiegeln die Namespaces die Ordnerstruktur wieder.
+- Wir können unseren Code auch in den `System` Namespace schreiben (bitte nicht...), wenn wir das wollten...
+- Wir können Namespaces auch umbenennen. `using MC = MyProject.MyConsole`.</script></section></div>
     </div>
 
     <script src="dist/reveal.js"></script>
